# ChessEngine

./: CMakeLists.txt  ChessEngine.sln  README.md
ChessEngine/: .gitignore  ChessEngine.cpp  ChessEngine.h  ChessEngine.vcxproj  ChessEngine.vcxproj.filters  Main.cpp  defbits.h
ChessEngine/Board/: BitBoard.cpp  Board.cpp  Board.h
ChessEngine/Includes/: Board.hpp
